--- a/Templates/Admin/login.html
+++ b/Templates/Admin/login.html
@@ -1,4 +1,5 @@
-{% extends "../Defaults/default.html" %} {% block body %}
+{% extends "../Defaults/default.html" %} 
+{% block body %}
 
 <div class="container">
     <div class="section">
@@ -7,26 +8,14 @@
             <div class="col s12 m6">
                 <div class="row">
                     <form class="col s12">
-                        <center>
+                        <center style="padding-bottom: 2em;">
                             <img class="responsive-img" style="width: 250px;" src="https://i.imgur.com/ax0NCsK.gif" />
                             <h5 class="indigo-text">Please, login into your account</h5>
                         </center>
-                        <br><br>
-                        <div class="row">
-
-                            <div class="input-field col s6">
-                                <input placeholder="Placeholder" id="first_name" type="text" class="validate">
-                                <label for="first_name">First Name</label>
-                            </div>
-                            <div class="input-field col s6">
-                                <input id="last_name" type="text" class="validate">
-                                <label for="last_name">Last Name</label>
-                            </div>
-                        </div>
                         <div class="row">
                             <div class="input-field col s12">
-                                <input disabled value="I am not editable" id="disabled" type="text" class="validate">
-                                <label for="disabled">Disabled</label>
+                                <input id="email" type="email" class="validate">
+                                <label for="email">Email</label>
                             </div>
                         </div>
                         <div class="row">
@@ -35,22 +24,11 @@
                                 <label for="password">Password</label>
                             </div>
                         </div>
-                        <div class="row">
-                            <div class="input-field col s12">
-                                <input id="email" type="email" class="validate">
-                                <label for="email">Email</label>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col s12">
-                                This is an inline input field:
-                                <div class="input-field inline">
-                                    <input id="email_inline" type="email" class="validate">
-                                    <label for="email_inline">Email</label>
-                                    <span class="helper-text" data-error="wrong" data-success="right">Helper text</span>
-                                </div>
-                            </div>
-                        </div>
+                        <center>  
+                            <button class="btn waves-effect waves-light light-blue darken-2" type="submit" name="action">Submit
+                            <i class="material-icons right">send</i>
+                          </button>
+                        </center>
                     </form>
                 </div>
 
