--- a/Templates/Defaults/default.html
+++ b/Templates/Defaults/default.html
@@ -20,20 +20,28 @@
             }          
         </style>
         {% block header %}
-            <title>Lyrics Translate</title>
+            <title>Meds</title>
         {% endblock %}
     </head>
 
     <body>
-    <header>{% include "./navbar.html" %}</header>
+    <header>
+      {% block navbar %}
+       {% include "./navbar.html" %}
+      {% endblock %}
+    </header>
     <main>
     {% block body %}
     {% endblock %}
     </main>
-    <!--JavaScript at end of body for optimized loading-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-
+    {% block footer %}
     {% include "./footer.html" %}
+    {% endblock %}
+
+
+    <!--JavaScript at end of body for optimized loading-->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     {% block end %}
     {% endblock %}
     </body>
