--- a/Templates/Admin/login.html
+++ b/Templates/Admin/login.html
@@ -1,42 +1,42 @@
-{% extends "../Defaults/default.html" %} 
+{% extends "../Defaults/default.html" %}
 {% block body %}
 
-<div class="container">
-    <div class="section">
-        <div class="row" style="margin-top: 2em;">
-            <div class="col s12 m3"></div>
-            <div class="col s12 m6">
-                <div class="row">
-                    <form class="col s12">
-                        <center style="padding-bottom: 2em;">
-                            <img class="responsive-img" style="width: 250px;" src="https://i.imgur.com/ax0NCsK.gif" />
-                            <h5 class="indigo-text">Please, login into your account</h5>
-                        </center>
-                        <div class="row">
-                            <div class="input-field col s12">
-                                <input id="email" type="email" class="validate">
-                                <label for="email">Email</label>
+    <div class="container">
+        <div class="section">
+            <div class="row" style="margin-top: 2em;">
+                <div class="col s12 m3"></div>
+                <div class="col s12 m6">
+                    <div class="row">
+                        <form class="col s12" method='post'>
+                            <center style="padding-bottom: 2em;">
+                                <img class="responsive-img" style="width: 250px;" src="https://i.imgur.com/ax0NCsK.gif"/>
+                                <h5 class="indigo-text">Please, login into your account</h5>
+                            </center>
+                            <div class="row">
+                                <div class="input-field col s12">
+                                    <input name="email" id="email" type="email" class="validate">
+                                    <label for="email">Email</label>
+                                </div>
                             </div>
-                        </div>
-                        <div class="row">
-                            <div class="input-field col s12">
-                                <input id="password" type="password" class="validate">
-                                <label for="password">Password</label>
+                            <div class="row">
+                                <div class="input-field col s12">
+                                    <input id="password" type="password" class="validate">
+                                    <label for="password">Password</label>
+                                </div>
                             </div>
-                        </div>
-                        <center>  
-                            <button class="btn waves-effect waves-light light-blue darken-2" type="submit" name="action">Submit
+                            <center>
+                                <button class="btn waves-effect waves-light light-blue darken-2" type="submit" name="action">Submit
                             <i class="material-icons right">send</i>
-                          </button>
-                        </center>
-                    </form>
-                </div>
+                                </button>
+                            </center>
+                        </form>
+                    </div>
 
+                </div>
+                <div class="col s12 m3"></div>
             </div>
-            <div class="col s12 m3"></div>
+            <br><br>
         </div>
-        <br><br>
     </div>
-</div>
 
 {% endblock %}
