--- a/Templates/Defaults/default.html
+++ b/Templates/Defaults/default.html
@@ -1,48 +1,53 @@
 <!DOCTYPE html>
-  <html>
-    <head>
-      <!--Import Google Icon Font-->
-      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <!--Import materialize.css-->
+<html>
+  <head>
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Import materialize.css-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
-      <!--Let browser know website is optimized for mobile-->
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <style>
-            body {
-                display: flex;
-                min-height: 100vh;
-                flex-direction: column;
-            }
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <style>
+      body {
+        display: flex;
+        min-height: 100vh;
+        flex-direction: column;
+      }
 
-            main {
-                flex: 1 0 auto;
-            }          
-        </style>
-        {% block header %}
-            <title>Meds</title>
-        {% endblock %}
-    </head>
+      main {
+        flex: 1 0 auto;
+      }
+    </style>
+    {% block header %}
+      <title>Meds</title>
+    {% endblock %}
+  </head>
 
-    <body>
+  <body>
     <header>
       {% block navbar %}
-       {% include "./navbar.html" %}
+        {% include "./navbar.html" %}
       {% endblock %}
     </header>
     <main>
-    {% block body %}
-    {% endblock %}
+      {% block body %}{% endblock %}
     </main>
     {% block footer %}
-    {% include "./footer.html" %}
+      {% include "./footer.html" %}
     {% endblock %}
-
 
     <!--JavaScript at end of body for optimized loading-->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    {% block end %}
-    {% endblock %}
-    </body>
-  </html>
+    {% block end %}{% endblock %}
+    <script>
+      $(document).ready(function () {
+        console.log("here");
+        {% for item in toasts %}
+          M.toast({html: '{{ item }}', classes: 'rounded'});
+        {% endfor %}
+      });
+    </script>
+  </body>
+</html>
