--- a/Templates/Admin/login.html
+++ b/Templates/Admin/login.html
@@ -14,18 +14,18 @@
                             </center>
                             <div class="row">
                                 <div class="input-field col s12">
-                                    <input name="email" id="email" type="email" class="validate">
+                                    <input required="" aria-required="true" name="email" id="email" type="email" class="validate">
                                     <label for="email">Email</label>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="input-field col s12">
-                                    <input id="password" type="password" class="validate">
+                                    <input name="password" required="" aria-required="true" id="password" type="password" class="validate">
                                     <label for="password">Password</label>
                                 </div>
                             </div>
                             <center>
-                                <button class="btn waves-effect waves-light light-blue darken-2" type="submit" name="action">Submit
+                                <button class="btn waves-effect waves-light light-blue darken-2" type="submit" name="action">Login
                             <i class="material-icons right">send</i>
                                 </button>
                             </center>
