--- a/Templates/Defaults/admin-template.html
+++ b/Templates/Defaults/admin-template.html
@@ -29,7 +29,25 @@
 			</li>
 		{% endblock %}
 	</ul>
-	<a href="#" data-target="slide-out" class="sidenav-trigger">
-		<i class="material-icons">menu</i>
-	</a>
+{% endblock %}
+
+{% block navbar %}
+	<nav class="hide-on-large-only light-blue" role="navigation">
+		<div class="nav-wrapper">
+
+			<a href="#" data-target="slide-out" class="sidenav-trigger">
+				<i class="material-icons">menu</i>
+			</a>
+			<a href="#" class="brand-logo">Logo</a>
+		</div>
+	</nav>
+	{# to remove the nav bar from this  #}
+{% endblock %}
+
+{% block end %}
+	<script>
+		$(document).ready(function () {
+			$('.sidenav').sidenav();
+		});
+	</script>
 {% endblock %}
