--- a/Templates/Defaults/footer.html
+++ b/Templates/Defaults/footer.html
@@ -1,4 +1,4 @@
-<footer class="page-footer light-blue">
+<footer class="page-footer light-blue" style="padding-top:0px;">
   {# <div class="container">
       <div class="row">
         <div class="col l6 s12">
