Added signup for doctor , bug fixes,confpass validator

--- a/Templates/Doctor/signup.html
+++ b/Templates/Doctor/signup.html
@@ -55,7 +55,7 @@
 							</div>
 							<div class="row">
 								<div class="input-field col s12">
-									<select name="hostpital" class="validate" required="required" aria-required="true">
+									<select name="hospital" class="validate" required="required" aria-required="true">
 										<option value="" disabled selected>Hostpital</option>
 										{% for option in hospitals %}
 											<option value="{{ option.id }}">{{ option.name }}</option>
