Settings page for admin,price per session and empid

--- a/Templates/Doctor/signup.html
+++ b/Templates/Doctor/signup.html
@@ -26,6 +26,12 @@
 							</div>
 							<div class="row">
 								<div class="input-field col s12">
+									<input required="" aria-required="true" name="empid" id="empid" type="text" class="validate">
+									<label for="empid">EmployeeID</label>
+								</div>
+							</div>
+							<div class="row">
+								<div class="input-field col s12">
 									<select name="designation" class="validate" required="required" aria-required="true">
 										<option value="" disabled selected>Designation</option>
 										<option value="Head of Department">Head of Department</option>
