--- a/Templates/Admin/sidebar.html
+++ b/Templates/Admin/sidebar.html
@@ -3,22 +3,22 @@
 		<div class="background blue lighten-5">
 			{# <img src="images/office.jpg"> #}
 		</div>
-		<a href="#user"><img class="circle" src="{{ gravatar }}"></a>
+		<a href="#user"><img class="circle" src="{{ sidebar.gravatar }}"></a>
 		<a href="#name">
-			<span class="black-text name">{{ hospitalName }}</span></a>
+			<span class="black-text name">{{ sidebar.hospitalName }}</span></a>
 		<a href="#email">
-			<span class="black-text email">{{ email }}</span></a>
+			<span class="black-text email">{{ sidebar.email }}</span></a>
 	</div>
 </li>
 <li>
 	<div class="divider" style="margin-top:0px"></div>
 </li>
 <li>
-	<a class="waves-effect" href="#!">
+	<a class="waves-effect" href="/admin/">
 		<i class="material-icons">cloud</i>Unverified</a>
 </li>
 <li>
-	<a class="waves-effect" href="#!">
+	<a class="waves-effect" href="/admin/settings">
 		<i class="material-icons">cloud</i>Settings</a>
 </li>
 <li>
