Added doctors screen

--- a/Templates/Admin/settings.html
+++ b/Templates/Admin/settings.html
@@ -80,6 +80,7 @@
 {% endblock %}
 
 {% block end %}
+	{{ super() }}
 	<script>
 		$("#password").on("focusout", function (e) {
 			if ($(this).val() != $("#passwordConfirm").val()) {
