--- a/Templates/Admin/sidebar.html
+++ b/Templates/Admin/sidebar.html
@@ -15,7 +15,11 @@
 </li>
 <li>
 	<a class="waves-effect" href="/admin/">
-		<i class="material-icons">cloud</i>Unverified</a>
+		<i class="material-icons">place</i>Doctors</a>
+</li>
+<li>
+	<a class="waves-effect" href="/admin/unverified">
+		<i class="material-icons">send</i>Unverified</a>
 </li>
 <li>
 	<a class="waves-effect" href="/admin/settings">
@@ -26,5 +30,5 @@
 </li>
 <li>
 	<a class="waves-effect" href="/admin/logout">
-		<i class="material-icons">cloud</i>Logout</a>
+		<i class="material-icons">whatshot</i>Logout</a>
 </li>
