--- a/Templates/Admin/doctor.html
+++ b/Templates/Admin/doctor.html
@@ -31,6 +31,11 @@
 				{% for item in languages %}{{ item }} ,{% endfor %}
 			</h6>
 		</div>
+		<div class="row" >
+			<h6>
+				Price Per Session : {{ pricePerSession }}
+			</h6>
+		</div>
 		<div class="row">
 
 			<div class="switch">
@@ -46,6 +51,7 @@
 {% endblock %}
 
 {% block end %}
+	{{ super() }}
 	<script>
 		$(document).ready(function () {
 			M.updateTextFields();
