--- a/Templates/Defaults/dashboard.html
+++ b/Templates/Defaults/dashboard.html
@@ -47,5 +47,8 @@
 		$(document).ready(function () {
 			$('.sidenav').sidenav();
 		});
+		$(document).ready(function () {
+			$('.collapsible').collapsible();
+		});
 	</script>
 {% endblock %}
