--- a/Templates/Doctor/sidebar.html
+++ b/Templates/Doctor/sidebar.html
@@ -5,7 +5,7 @@
 		</div>
 		<a href="#user"><img class="circle" src="{{ sidebar.gravatar }}"></a>
 		<a href="#name">
-			<span class="black-text name">{{ sidebar.hospitalName }}</span></a>
+			<span class="black-text name">{{ sidebar.name }}</span></a>
 		<a href="#email">
 			<span class="black-text email">{{ sidebar.email }}</span></a>
 	</div>
@@ -13,6 +13,10 @@
 <li>
 	<a class="waves-effect" href="/doctor/">
 		<i class="material-icons">cloud</i>Settings</a>
+</li>
+<li>
+	<a class="waves-effect" href="/doctor/createsession">
+		<i class="material-icons"></i>Create Session</a>
 </li>
 <li>
 	<div class="divider"></div>
