--- a/Templates/Doctor/createsession.html
+++ b/Templates/Doctor/createsession.html
@@ -17,7 +17,7 @@
 			</div>
 			<div class="input-field col s12">
 				<center>
-					<button class="btn waves-effect waves-light light-blue darken-2" type="submit" name="action">Join Session
+					<button class="btn waves-effect waves-light light-blue darken-2" type="submit" name="sessionName">Join Session
                             <i class="material-icons right">send</i>
 					</button>
 				</center>
