--- a/Templates/Doctor/sidebar.html
+++ b/Templates/Doctor/sidebar.html
@@ -15,8 +15,8 @@
 		<i class="material-icons">cloud</i>Settings</a>
 </li>
 <li>
-	<a class="waves-effect" href="/doctor/createsession">
-		<i class="material-icons"></i>Create Session</a>
+	<a class="waves-effect" href="/doctor/call">
+		<i class="material-icons">call</i>Create Session</a>
 </li>
 <li>
 	<div class="divider"></div>
