--- a/Templates/Doctor/call.html
+++ b/Templates/Doctor/call.html
@@ -10,6 +10,14 @@
 	</div>
 	<div class="divider"></div>
 	<div class="container">
+		<div id="permissions" class="row">
+			<div class="col s12 m6">
+				<h4>Could not get permissions , please enable permissions then press retry</h4>
+			</div>
+			<div class="col s12 m6">
+				<button class="btn waves-effect waves-light" onclick="checkAndConnect()">Retry</button>
+			</div>
+		</div>
 		<div id="video-container" class="row">
 			{# <div class='col s12 m6'>
 					<div class='card'>
@@ -32,7 +40,7 @@
 			<form action="/doctor/leave-call" method="post">
 				<input type="hidden" name="sessionname" value="{{ sessionName }}"></input>
 				<input type="hidden" name="token" value="{{ token }}"></input>
-				<button id="buttonLeaveSession" class="btn btn-large btn-danger" type="submit" onclick="leaveSession()">
+				<button id="buttonLeaveSession" class="waves-effect waves-light btn" type="submit" onclick="leaveSession()">
 							Leave</button>
 			</form>
 		</div>
@@ -43,87 +51,103 @@
 	{{ super() }}
 	<script src="/static/js/openvidu-browser-2.14.0.min.js"></script>
 	<script>
-		var sessionName = "{{ sessionName | safe}}";
-		var token = "{{ token | safe}}";
-		var nickName = "{{ nickname | safe }}";
-		var userName = "{{ userName | safe }}";
-		console.warn('Request of TOKEN gone WELL (TOKEN:' + token + ')');
-		// --- 1) Get an OpenVidu object ---
-		OV = new OpenVidu();
-		// --- 2) Init a session ---
-		session = OV.initSession();
-		// --- 3) Specify the actions when events take place in the session ---
-		// On every new Stream received...
-		session.on('streamCreated', (event) => {
-			// Subscribe to the Stream to receive it
-			// HTML video will be appended to element with 'video-container' id
-			var subscriber = session.subscribe(event.stream, 'video-container');
-			// When the HTML video has been appended to DOM...
-			subscriber.on('videoElementCreated', (event) => {
-				// Add a new HTML element for the user's name and nickname over its video
 
-				//surround with card stuff
-				$(event.element).wrap("<div class='col s12 m6'><div class='card'><div class='card-content'></div></div></div>");
-				$(event.element).addClass("responsive-video");
+		function checkAndConnect() {
+			navigator
+				.mediaDevices
+				.getUserMedia({audio: true, video: true})
+				.then(function (stream) {
+					connect();
+				})
+				.catch(function (err) {});
+		}
 
-				//appendUserData(event.element, subscriber.stream.connection);
-			});
-		});
-		// On every Stream destroyed...
-		session.on('streamDestroyed', (event) => {
-			// Delete the HTML element with the user's name and nickname
-			//removeUserData(event.stream.connection);
+		checkAndConnect();
 
-			$(event.element)
-				.closest('.col')
-				.remove();
-		});
-		// --- 4) Connect to the session passing the retrieved token and some more data from
-		//        the client (in this case a JSON with the nickname chosen by the user) ---
-		session
-			.connect(token, {clientData: nickName})
-			.then(() => {
-				// --- 5) Set page layout for active call ---
+		function connect() {
+			$('#permissions').hide();
+			var sessionName = "{{ sessionName | safe}}";
+			var token = "{{ token | safe}}";
+			var nickName = "{{ nickname | safe }}";
+			var userName = "{{ userName | safe }}";
+			console.warn('Request of TOKEN gone WELL (TOKEN:' + token + ')');
+			// --- 1) Get an OpenVidu object ---
+			OV = new OpenVidu();
+			// --- 2) Init a session ---
+			session = OV.initSession();
+			// --- 3) Specify the actions when events take place in the session ---
+			// On every new Stream received...
+			session.on('streamCreated', (event) => {
+				// Subscribe to the Stream to receive it
+				// HTML video will be appended to element with 'video-container' id
+				var subscriber = session.subscribe(event.stream, 'video-container');
+				// When the HTML video has been appended to DOM...
+				subscriber.on('videoElementCreated', (event) => {
+					// Add a new HTML element for the user's name and nickname over its video
 
-				//$('#session-title').text(sessionName);
-				//$('#join').hide();
-				//$('#session').show();
-
-				// Here we check somehow if the user has 'PUBLISHER' role before
-				// trying to publish its stream. Even if someone modified the client's code and
-				// published the stream, it wouldn't work if the token sent in Session.connect
-				// method is not recognized as 'PUBLIHSER' role by OpenVidu Server
-				// --- 6) Get your own camera stream ---
-				var publisher = OV.initPublisher('video-container', {
-					audioSource: undefined, // The source of audio. If undefined default microphone
-					videoSource: undefined, // The source of video. If undefined default webcam
-					publishAudio: true, // Whether you want to start publishing with your audio unmuted or not
-					publishVideo: true, // Whether you want to start publishing with your video enabled or not
-					resolution: '640x480', // The resolution of your video
-					frameRate: 30, // The frame rate of your video
-					insertMode: 'APPEND', // How the video is inserted in the target element 'video-container'
-					mirror: false // Whether to mirror your local video or not
-				});
-				// --- 7) Specify the actions when events take place in our publisher ---
-				// When our HTML video has been added to DOM...
-				publisher.on('videoElementCreated', (event) => {
 					//surround with card stuff
 					$(event.element).wrap("<div class='col s12 m6'><div class='card'><div class='card-content'></div></div></div>");
-
-					var userData = {
-						nickName: nickName,
-						userName: userName
-					};
-					//appendUserData(event.element, userData);
-					$(event.element).prop('muted', true); // Mute local video
 					$(event.element).addClass("responsive-video");
+
+					//appendUserData(event.element, subscriber.stream.connection);
 				});
-				// --- 8) Publish your stream ---
-				session.publish(publisher);
-			})
-			.catch(error => {
-				console.warn('There was an error connecting to the session:', error.code, error.message);
 			});
+			// On every Stream destroyed...
+			session.on('streamDestroyed', (event) => {
+				// Delete the HTML element with the user's name and nickname
+				//removeUserData(event.stream.connection);
+
+				$(event.element)
+					.closest('.col')
+					.remove();
+			});
+			// --- 4) Connect to the session passing the retrieved token and some more data from
+			//        the client (in this case a JSON with the nickname chosen by the user) ---
+			session
+				.connect(token, {clientData: nickName})
+				.then(() => {
+					// --- 5) Set page layout for active call ---
+
+					//$('#session-title').text(sessionName);
+					//$('#join').hide();
+					//$('#session').show();
+
+					// Here we check somehow if the user has 'PUBLISHER' role before
+					// trying to publish its stream. Even if someone modified the client's code and
+					// published the stream, it wouldn't work if the token sent in Session.connect
+					// method is not recognized as 'PUBLIHSER' role by OpenVidu Server
+					// --- 6) Get your own camera stream ---
+					var publisher = OV.initPublisher('video-container', {
+						audioSource: undefined, // The source of audio. If undefined default microphone
+						videoSource: undefined, // The source of video. If undefined default webcam
+						publishAudio: true, // Whether you want to start publishing with your audio unmuted or not
+						publishVideo: true, // Whether you want to start publishing with your video enabled or not
+						resolution: '640x480', // The resolution of your video
+						frameRate: 30, // The frame rate of your video
+						insertMode: 'APPEND', // How the video is inserted in the target element 'video-container'
+						mirror: false // Whether to mirror your local video or not
+					});
+					// --- 7) Specify the actions when events take place in our publisher ---
+					// When our HTML video has been added to DOM...
+					publisher.on('videoElementCreated', (event) => {
+						//surround with card stuff
+						$(event.element).wrap("<div class='col s12 m6'><div class='card'><div class='card-content'></div></div></div>");
+
+						var userData = {
+							nickName: nickName,
+							userName: userName
+						};
+						//appendUserData(event.element, userData);
+						$(event.element).prop('muted', true); // Mute local video
+						$(event.element).addClass("responsive-video");
+					});
+					// --- 8) Publish your stream ---
+					session.publish(publisher);
+				})
+				.catch(error => {
+					console.warn('There was an error connecting to the session:', error.code, error.message);
+				});
+		}
 
 		function leaveSession() {
 			// --- 9) Leave the session by calling 'disconnect' method over the Session object ---
