Added location to the admin/hospital , and customer stuff

--- a/Templates/Admin/signup.html
+++ b/Templates/Admin/signup.html
@@ -1,4 +1,12 @@
 {% extends "../Defaults/default.html" %}
+{% block style %}
+    <link
+	rel="stylesheet"
+	href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
+	integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
+	crossorigin=""
+/>
+{% endblock %}
 {% block body %}
     <div class="container">
         <div class="section">
@@ -6,54 +14,173 @@
                 <div class="col s12 m3"></div>
                 <div class="col s12 m6">
                     <div class="row">
-                        <form class="col s12" method="post">
+                        <form id="submitform" class="col s12" method="post">
                             <center>
-                                <img class="responsive-img" style="width: 250px;" src="https://i.imgur.com/ax0NCsK.gif"/>
-                                <h5 class="indigo-text">Please, login into your account</h5>
+                                <img
+								class="responsive-img"
+								style="width: 250px;"
+								src="https://i.imgur.com/ax0NCsK.gif"
+							/>
+                                <h5 class="indigo-text">
+								Please, login into your account
+							</h5>
                             </center>
-                            <br><br>
+                            <br/><br/>
                             <div class="row">
                                 <div class="input-field col s12">
-                                    <input {% if hospitalName %} value='{{ hospitalName }}' {% endif %}required="" aria-required="true" name="hospitalName" id="hostpital_name" type="text" class="validate">
-                                    <label for="hostpital_name">Hostpital Name</label>
+                                    <input
+									{%
+									if
+									hospitalName
+									%}
+									value="{{ hospitalName }}"
+									{%
+									endif
+									%}required=""
+									aria-required="true"
+									name="hospitalName"
+									id="hostpital_name"
+									type="text"
+									class="validate"
+								/>
+                                    <label for="hostpital_name"
+									>Hostpital Name</label
+								>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="input-field col s12">
-                                    <input required="" aria-required="true" name="email" id="email" type="email" class="validate">
+                                    <input
+									required=""
+									aria-required="true"
+									name="email"
+									id="email"
+									type="email"
+									class="validate"
+								/>
                                     <label for="email">Email</label>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="input-field col s12">
-                                    <input required="" aria-required="true" name="password" id="password" type="password" class="validate">
+                                    <input
+									required=""
+									aria-required="true"
+									name="password"
+									id="password"
+									type="password"
+									class="validate"
+								/>
                                     <label for="password">Password</label>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="input-field col s12">
-                                    <input required="" aria-required="true" name="confPassword" id="passwordConfirm" type="password" class="validate">
-                                    <label for="passwordConfirm"  data-error="Password not match" data-success="Password Match">Confirm Password</label>
+                                    <input
+									required=""
+									aria-required="true"
+									name="confPassword"
+									id="passwordConfirm"
+									type="password"
+									class="validate"
+								/>
+                                    <label
+									for="passwordConfirm"
+									data-error="Password not match"
+									data-success="Password Match"
+									>Confirm Password</label
+								>
                                 </div>
                             </div>
+                            <div class="row">
+                                <div class="col s12">
+                                    <div id="mapid" style="height: 20em;"></div>
+                                </div>
+                                <div class="col s12">
+                                    <center>
+                                        <h6 id="cry-for-perms" style="visibility: hidden;">
+										Please give location permissions and
+										press locate me
+									</h6>
+                                        <button  type="button"
+										class="btn waves-effect waves-light light-blue darken-2"
+										onclick="getLocation()">
+										Locate Me
+										<i class="material-icons"
+											>location_searching</i
+										>
+                                        </button>
+                                    </center>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="input-field col s12">
+                                    <input name="address1" id="address1" type="text" class="validate">
+                                    <label for="address1">Address</label>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="input-field col s12">
+                                    <input  name="address2" id="address2" type="text" class="validate">
+                                    <label for="address2">Address Line 2</label>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="input-field col s6">
+                                    <input  name="city" id="city" type="text" class="validate">
+                                    <label for="city">City</label>
+                                </div>
+                                <div class="input-field col s6">
+                                    <input  name="zip" id="zip" type="text" class="validate">
+                                    <label for="zip">Zip Code</label>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="input-field col s6">
+                                    <input  name="state" id="state" type="text" class="validate">
+                                    <label for="state">State</label>
+                                </div>
+                                <div class="input-field col s6">
+                                    <select name="country">
+                                        <option value="" disabled selected>Choose your Country</option>
+                                        {% include "../Defaults/countries.html" %}
+                                    </select>
+                                    <label>Country</label>
+                                </div>
+                            </div>
+
                             <center>
-                                <button class="btn waves-effect waves-light light-blue darken-2" type="submit" name="action">Submit
-                            <i class="material-icons right">send</i>
+                                <button
+								class="btn waves-effect waves-light light-blue darken-2"
+								type="submit"
+								name="action"
+							>
+								Submit
+								<i class="material-icons right">send</i>
                                 </button>
                             </center>
                         </form>
                     </div>
-
                 </div>
                 <div class="col s12 m3"></div>
             </div>
-            <br><br>
+            <br/><br/>
         </div>
     </div>
 {% endblock %}
-
 {% block end %}
+    <script
+	src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
+	integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
+	crossorigin=""
+></script>
     <script>
+
+        $(document).ready(function () {
+            $('select').formSelect();
+        });
+
         $("#password").on("focusout", function (e) {
             if ($(this).val() != $("#passwordConfirm").val()) {
                 $("#passwordConfirm")
@@ -76,6 +203,94 @@
                     .removeClass("invalid")
                     .addClass("valid");
             }
+        });
+
+        var map = L
+            .map("mapid")
+            .fitWorld();
+
+        var marker = undefined;
+
+        map.on('click', addMarker);
+
+        function addMarker(e) {
+            if (marker) {
+                return;
+            }
+
+            // Add marker to map at click location; add popup window
+            marker = new L
+                .marker(e.latlng, {draggable: true})
+                .addTo(map);
+        }
+
+        L
+            .tileLayer("https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token=pk.eyJ1IjoiZHJhZ3V2ZSIsImEiOiJja2I2emZ1M24wMHRjMnF1c3JlaG16ZWV0In0.UOQ1hQpmtNZpDE_cl3MA-w", {
+                maxZoom: 18,
+                attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, ' + '<a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' + 'Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
+                id: "mapbox/streets-v11",
+                tileSize: 512,
+                zoomOffset: -1
+            })
+            .addTo(map);
+
+        function onLocationFound(e) {
+            if (marker != undefined) {
+                map.removeLayer(marker);
+            };
+
+            var radius = e.accuracy / 2;
+
+            marker = L
+                .marker(e.latlng, {draggable: true})
+                .addTo(map)
+                .bindPopup("You are within " + radius + " meters from this point")
+                .openPopup();
+
+            L
+                .circle(e.latlng, radius)
+                .addTo(map);
+        }
+
+        function onLocationError(e) {
+            if (e.code == 1) {
+                $("#cry-for-perms").css("visibility", "visible");
+                //alert("Error: Access is denied!");
+            } else if (e.code == 2) {
+                alert("Error: Position is unavailable!");
+            }
+        }
+
+        map.on("locationfound", onLocationFound);
+        map.on("locationerror", onLocationError);
+
+        map.locate({setView: true, maxZoom: 16});
+
+        function getLocation() {
+            map.locate({setView: true, maxZoom: 16});
+        }
+
+        $("#submitform").submit(function (eventObj) {
+            //check if the location is there
+            if (marker == undefined) {
+                M.toast({html: "Please locate the hospital", classes: 'rounded'});
+                return false;
+            };
+
+            var latlong = marker.getLatLng();
+            $("<input />")
+                .attr("type", "hidden")
+                .attr("name", "lat")
+                .attr("value", latlong.lat)
+                .appendTo("#submitform");
+
+            $("<input />")
+                .attr("type", "hidden")
+                .attr("name", "lng")
+                .attr("value", latlong.lng)
+                .appendTo("#submitform");
+
+            return true;
         });
     </script>
 {% endblock %}
