--- a/Templates/Customer/search.html
+++ b/Templates/Customer/search.html
@@ -50,51 +50,17 @@
 {% endblock %}
 
 {% block navbar %}
-	{# <nav>
-		<div class="nav-wrapper">
-			<div class="row">
-				<div class="col s12 m4">
-					<form>
-						<div class="input-field">
-							<input id="search" type="search" required>
-							<label class="label-icon" for="search">
-								<i class="material-icons">search</i>
-							</label>
-							<i class="material-icons">close</i>
-						</div>
-					</form>
-				</div>
-				<div class="col s12 m4">
-					<a href="#" class="brand-logo center">Logo</a>
-				</div>
-				<div class="col s12 m4">
-					<ul id="nav-mobile" class="right hide-on-med-and-down">
-						<li>
-							<a href="sass.html">Sass</a>
-						</li>
-						<li>
-							<a href="badges.html">Components</a>
-						</li>
-						<li>
-							<a href="collapsible.html">JavaScript</a>
-						</li>
-					</ul>
-				</div>
-			</div>
-
-		</div>
-	</nav> #}
 	<div class="navbar-fixed">
 		<nav>
 			<div class="nav-wrapper">
-				<ul class="left">
+				{# <ul class="left">
 					<li>
 						<a>
 							<i class="hamburger material-icons hide-on-med-and-up">menu</i>
 						</a>
 					</li>
-				</ul>
-				<form action="" method="post">
+				</ul> #}
+				<form class="left" action="" method="post">
 					<div class="input-field">
 						<input id="search" type="search" name="search" placeholder="Search Here">
 						<label class="label-icon" for="search">
