--- a/Templates/Defaults/countries.html
+++ b/Templates/Defaults/countries.html
@@ -1,3 +1,4 @@
+{# https://www.freeformatter.com/iso-country-list-html-select.html - where we got it from #}
 <option value="AF">Afghanistan</option>
 <option value="AX">Åland Islands</option>
 <option value="AL">Albania</option>
